<resources>
    <string name="app_name">F4 Hotspot</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_text">Button text</string>
    <string name="create_profile">Create Profile</string>
    <string name="favourites">Mine favoritter</string>
    <string name="my_profile">My Profile</string>
    <string name="messages">Messages</string>
    <string name="map">Map</string>
    <string name="log_in">Log in</string>
    <string name="opret_profil">opret profil</string>
    <string name="edit_profil">Edit Profile</string>
    <string name="username">Username</string>
    <string name="e_mail">Enter e-mail</string>
    <string name="name">Navn</string>
    <string name="age">Alder</string>
    <string name="bio">Bio</string>
    <string name="rememberMe">Remember me</string>


    <string name="password">kodeord</string>
    <string name="repeat_password">gentag kodeord</string>
    <string name="log_in2">Sign in</string>
    <string name="Forgot_login">Forgot login info?</string>
    <string name="password2">Password</string>
    <string name="bio_text">Enter profile text</string>
    <string name="kvinde">Kvinde</string>
    <string name="mand">Mand</string>
    <string name="opret_profil2">Opret Profil</string>
    <string name="place_name">Sted Navn</string>
    <string name="Place_location">Lokation/By</string>
    <string name="Place_Disctance">Afstand</string>
    <string name="personal_name">Marie</string>
    <string name="edit_profile">Rediger profil</string>
    <string name="personal_age">23 år</string>
    <string name="personal_description">"Altid frisk på at snakke"</string>
    <string name="send_message">Send besked</string>

    <string name="checkIn">Tjek ind</string>
    <string name="checkedIn">Tjekket ind</string>
    <string name="amntOfPeople">7 Indtjekninger</string>
    <string name="address"> 50m  - København</string>
    <string name="description">beskrivelse</string>
    <string name="hotSpotName">Kassen</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="i_did_not_receive_a_verification_code_resend">I did not receive a verification code? <b>Resend</b></string>
    <string name="sign_out">"Sign out"</string>
    <string name="new_message">NEW MESSAGE</string>
    <string name="Submit_changes">Submit changes</string>
    <string name="change_profile_message">Profile message</string>
    <string name="delete_account">Delete account</string>
    <string name="Done">Done</string>
    <string name="checkInEng">Check in</string>
    <string name="are_you_a">Are you a...</string>
    <string name="your_age_will_be_shown_to_n_other_users_in_a_hotspot">Your age will be shown to \n other users in a HotSpot</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="how_old_n_are_you">How old \n are you?</string>
    <string name="enter_date">Enter date</string>
    <string name="your_age_shown">Your age will be shown to \n other users in a HotSpot</string>
    <string name="continue_button">Continue</string>
    <string name="tell_us_your_nfirst_name">Tell us your \nfirst name!</string>
    <string name="first_name">First name..</string>
    <string name="this_name_will_be_shown_to_other_users_n_at_your_hotspot">This name will be shown to other users\n at your Hotspot</string>
    <string name="show_hotspot_n_who_you_are">Show HotSpot\n who you are!</string>
    <string name="profile_text">Profile text...</string>
    <string name="everyone_on_hotspot_is_required_to_n_write_a_sentence_or_two_about_themselves">Everyone on HotSpot is required to\n write a sentence or two about themselves.</string>
    <string name="upload_a_photo">Upload a photo</string>
    <string name="you_need_one_photo_n_in_order_to_participate_in_hotspots">You need one photo \n in order to participate in HotSpots</string>
    <string name="create_account">Create account</string>
    <string name="my_email_address_n_is">My email address \n is</string>
    <string name="email">Email</string>
    <string name="lost_account">We will use your email in case your account is lost.</string>
    <string name="no_favorite_hotspots">You dont have any favorite HotSpots</string>
    <string name="phone_number">Phone number</string>



</resources>