<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f7f7f7"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context=".view.CreateProfile.FragmentProfileText">

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/progressBarStyleHorizontal"
            android:progress="82"
            android:progressTint="@color/orange_hotspot"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:fontFamily="@font/poppins_semibold"
            android:paddingTop="10dp"
            android:text="@string/show_hotspot_n_who_you_are"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp" />
        <EditText
            android:id="@+id/tv_first_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/profile_text"
            android:fontFamily="@font/poppins_light"
            android:textColor="#000"
            android:layout_marginHorizontal="30dp"
            android:backgroundTint="@color/black"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:paddingTop="10dp"
            android:text="@string/everyone_on_hotspot_is_required_to_n_write_a_sentence_or_two_about_themselves"
            android:textAlignment="center"
            android:textColor="#c5c5c5"
            android:textSize="12sp"
            android:layout_marginHorizontal="30dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/continueButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:background="@drawable/custom_button"
            android:textColor="#f7f7f7"
            android:text="@string/continue_button"
            android:alpha="0.1"
            android:textAllCaps="false"
            />
        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"

            android:src="@drawable/hotspot_logo" />




    </LinearLayout>